# WebTool-MCP

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.ruler/: AGENTS.md  ruler.toml
docker/firecrawl/: .env.example  docker-compose.yaml
examples/: README.md  agentic_fetch_examples.py  fetch_web_content_examples.py  run_examples.py  search_web_examples.py  sse_streaming_example.py  summarize_web_content_examples.py  test_llm_providers.py  test_mcp.py  test_server_connection.py  vision_agentic_fetch_example.py  web_fetch_examples.py  web_search_examples.py  web_summarize_examples.py
examples/files/: Family Budget.csv  Family Budget.xls  Family Budget.xlsx  Family Budget.xml  Presentation.ppt  Presentation.pptx  creative resume.doc  creative resume.docx
scripts/: start-firecrawl.sh
src/mcp_server/: auth.py  server.py
src/mcp_server/agentic/: __init__.py  fetch_agent.py
src/mcp_server/extraction/: __init__.py  firecrawl_client.py  pipeline.py
src/mcp_server/llm/: __init__.py  base.py  exceptions.py  manager.py  openai_compatible.py  parser.py
src/webtool_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_agentic_fetch.py  test_auth.py  test_extraction_pipeline.py  test_fetch_agent.py  test_firecrawl_client.py  test_parser.py  test_server.py  test_vision.py
